# reasoning-chat

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
src/: common.py  initialization.py  main.py  memory.py  prompts.py
src/config/: __init__.py  development.py
src/core/: openai_module.py
src/tools/: __init__.py  base_tool.py  dify_googlesearch.py  dify_telephone.py  memory_updater.py
